# schema-doc-agent

./: .gitignore  Dockerfile  LICENSE  README.md  env.example  install.sh  pyproject.toml  requirements.txt  schema-doc-agent
examples/: github-actions-workflow.yml  order_created.avsc  user_event.avsc
schema_doc_bot/: __init__.py  agent.py  avro_analyzer.py  cli.py  config.py  github_client.py  json_schema_analyzer.py  json_schema_updater.py  llm_client.py  local_runner.py  logging_config.py  protobuf_analyzer.py  registry_client.py  schema_updater.py
tests/: __init__.py  test_agent.py  test_analyzers.py  test_config.py  test_llm_client.py  test_registry_client.py  test_updaters.py
